--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Auswertung/.Rhistory
 Auswertung/.Rhistory
 /Auswertung/.Rproj.user
 Auswertung/.Rhistory
+Auswertung/.Rproj.user/2AAC3819/pcs/windowlayoutstate.pper
+Auswertung/.Rproj.user/2AAC3819/pcs/windowlayoutstate.pper
+Auswertung/.Rproj.user/2AAC3819/pcs/source-pane.pper
+Auswertung/.Rhistory
