--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,5 @@
 ._.DS_Store
 **/.DS_Store
 **/._.DS_Store
-Auswertung/.Rproj.user
-Auswertung/.Rhistory
-Auswertung/.Rhistory
-/Auswertung/.Rproj.user
-Auswertung/.Rhistory
-Auswertung/.Rproj.user/2AAC3819/pcs/windowlayoutstate.pper
-Auswertung/.Rproj.user/2AAC3819/pcs/windowlayoutstate.pper
-Auswertung/.Rproj.user/2AAC3819/pcs/source-pane.pper
-Auswertung/.Rhistory
+**/.Rproj.user
+**/.Rhistory
